# text-generation

./: .gitignore  Dockerfile  README.md  Tweet_Generation_with_GPT_2_ja_Finetuned_by_Your_Tweets.ipynb  analyze_tweet.ipynb  create_tweet.ipynb  create_tweets.py  dist.txt  dist1.txt  download_tweet.py  download_tweets.py  finetune.sh  pyproject.toml  requirements.txt  setup.sh
RoBERTa_japanese/: bert_predict.py  bert_score.py  bert_transform.py  encode_bpe.py  predict-classifier.py  run_finetune.py  train-classifier.py
RoBERTa_japanese/model/: layer_norm.py  modeling.py
gpt2-japanese/: encode_bpe.py  gpt2-generate.py  gpt2-score.py  gpt2-transform.py  model.py  run_finetune.py  sampling.py
notebooks/: create_tweet.ipynb
sample_texts/: ecoyuri_500.txt
scripts/config/: __init__.py  ng_words.py
scripts/python/: create_tweets.py  download_tweets.py  eval_tweets.py
scripts/shell/: finetune.sh  generate.sh  setup.sh
src/: cron_tweet.sh  finetune.sh  generate.sh  setup.sh
